syntax = "proto3";

package protocol.rpc;

import "rpc/metadata.proto";
import "rpc/item.proto";

message UserId {
  int64 value = 1;
}

message CreateUserRequest {
  string device_id = 1;
  string name = 2;
}

message CreateUserResponse {
  Metadata metadata = 1;
}

message CreateSessionRequest {
  string device_id = 1;
}

message CreateSessionResponse {
  Metadata metadata = 1;
  string session_token = 2;
}

message LoginRequest {
  string session_token = 1;
}

message LoginResponse {
  Metadata metadata = 1;
  UserId user_id = 2;
  UserInventory user_inventory = 3;
}

service Auth {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
